welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:9: error: too many arguments for method droite: ()Unit
	droite(3);
              ^