welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse () {
	baisseBrosse;
	avance();
	avance();
	left();
	avance();
	avance();
	droite(3);
	avance();
	avance();
	left();
	avance();
	avance();
	left()	
}



